# conclave

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  test_aide.rs
proto/: agent_message.proto
src/: Dockerfile  affirmative.md  cli.rs  debate_judge_prompt.md  llm.rs  llm.rs.reference.txt  main.rs  message.rs  message_handler.rs  neg.md  network.rs  processor.rs  validator.rs
src/personalities/: debate_judge_prompt.md
