[package]
name = "conclave"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.18", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
socket2 = "0.6"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
llm = { version = "1.3.4", features = ["openai", "anthropic", "ollama", "google"] }
flate2 = { version = "1.1", features = ["default"] }
base64 = "0.21"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.23"
